<resources>
    <string name="app_name">finalassignment</string>
    <string name="action_settings">Settings</string>
    <string name="button">REGISTER</string>
    <string name="name">Name3</string>
    <string name="entry">Entry 3</string>
    <string name="name2">Name2</string>
    <string name="entry2">Entry 2</string>
    <string name="name1">Name1</string>
    <string name="entry1">Entry 1</string>
    <string name="team_name">Team Name</string>
</resources>
